--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Popup</title>
+    <title>EasyWallet</title>
   </head>
   <body>
     <div id="root"></div>
